--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -2,6 +2,6 @@ Probabilistic Risk Assessment (PRA) is essential for the safety analysis of nucl
 
 These large models create significant computational challenges when exact quantification is required. Qualitative analysis such as cut set enumeration faces combinatorial explosion in large models. To address these challenges, approximate methods such as Rare Event Approximation (REA) and Minimal Cut Upper Bound (MCUB), and truncation limits on probability, frequency, or cut set order are used. These approaches can make quantification faster, but they have their own limitations, such as overestimating failure probabilities when non-rare events are present.
 
-To address these issues, the journal paper under critique introduces the Zero-Suppressed Ternary Decision Diagram (ZTDD) algorithm. ZTDD is presented as a new approach that can quantify non-coherent fault trees exactly, overcoming the limitations of traditional approximations like the Delete-Term Approximation (DTA). The authors claim that ZTDD can rapidly compute both prime implicants and exact core damage frequency (CDF) even for large and complex PRA models.
+To address these issues, the journal paper under critique introduces the Zero-Suppressed Ternary Decision Diagram (ZTDD) algorithm. The author claims that ZTDD can rapidly compute both prime implicants and exact core damage frequency (CDF) even for noncoherent PRA models, overcoming the limitations of traditional approximations like Delete-Term Approximation (DTA).
 
 This critique paper has three main objectives. First, it provides an independent review of both approximate and exact solution methods for large-scale PRA quantification, with a focus on decision diagram approaches. The ZTDD approach is then critically evaluated, both in terms of its methodology and practical applicability. Second, the paper compares ZTDD with other established quantification methods, including traditional algorithms, the previously discussed decision diagram techniques, normal form representations, and Monte Carlo simulation. Finally, the analysis considers the memory and time complexity of each method and discusses their advantages and disadvantages for very large PRA models. The paper concludes by evaluating whether a single quantification algorithm can address all practical needs, or if different methods are required for different use cases in advanced nuclear reactor safety assessments.
