--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,20 @@
+@article{kaplan_quantitative_1981,
+	title = {On {The} {Quantitative} {Definition} of {Risk}},
+	volume = {1},
+	issn = {0272-4332, 1539-6924},
+	url = {https://onlinelibrary.wiley.com/doi/10.1111/j.1539-6924.1981.tb01350.x},
+	doi = {10.1111/j.1539-6924.1981.tb01350.x},
+	language = {en},
+	number = {1},
+	urldate = {2022-10-16},
+	journal = {Risk Analysis},
+	author = {Kaplan, Stanley and Garrick, B. John},
+	month = mar,
+	year = {1981},
+	keywords = {risk, probability, Baye's theorem, decision, uncertainty},
+	pages = {11--27},
+}
+
 @article{nusbaumer2013fault,
   title={Fault tree linking versus event tree linking approaches: a reasoned comparison},
   author={Nusbaumer, O and Rauzy, A},
